rename all elements

--- a/app/lib/elements/ajax.html
+++ b/app/lib/elements/ajax.html
@@ -1,7 +1,7 @@
 <!--
   https://github.com/Polymer/polymer-elements/blob/cc82113898a8639754df311b1d96d75528d28ebd/polymer-ajax/polymer-xhr.html
 -->
-<polymer-element name="polymer-sr-xhr">
+<polymer-element name="sr-xhr">
   <template>
     <style>
       @host {
@@ -12,7 +12,7 @@
     </style>
   </template>
   <script>
-    Polymer('polymer-sr-xhr', {
+    Polymer('sr-xhr', {
       request: function (options) {
         options = options || {};
         var xhr = new XMLHttpRequest();
