update demo app

--- a/app/lib/elements/router.html
+++ b/app/lib/elements/router.html
@@ -54,7 +54,7 @@
       initStates: function () {
         var states = this.states;
         var names = this.stateNames;
-        var stateElements = document.getElementsByTagName('sr-state');
+        var stateElements = this.getElementsByTagName('sr-state');
         var i, len = stateElements.length;
         var state;
         for (i = 0; i < len; i += 1) {
