update appView element

--- a/release/polymer-simple-router-elements.html
+++ b/release/polymer-simple-router-elements.html
@@ -73,7 +73,8 @@
   }
 });</script></polymer-element>
 
-<polymer-element name="sr-appview"></polymer-element>
+<polymer-element name="sr-appview"><script>Polymer('sr-appview', {
+});</script></polymer-element>
 
 <polymer-element name="sr-history" attributes="root html5mode hashPrefix"><template><style>@host {
   * {
